--- a/src/Backend/Core/Layout/Sass/base/_base.scss
+++ b/src/Backend/Core/Layout/Sass/base/_base.scss
@@ -2,6 +2,10 @@ html {
   min-height: 100%;
 }
 
+body {
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
 .main-wrapper {
   position: relative;
   width: 100%;
